Use Stream.toList in the shape reference guard
SonarCloud java:S6204 on #256. Nothing here modifies the list, so the
unmodifiable one toList() returns says what is meant, and the Collectors
import goes with it.

1486 tests, 0 failures.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>